--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://boia.github.com
+url: http://boiawang.github.com
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
 author: Your Name
